--- a/views/indented.ejs
+++ b/views/indented.ejs
@@ -49,13 +49,28 @@
 <script>
     var protoType = <%= query.protoType? query.protoType : 0 %>;
     var goldeninit = false;
+    var myLayout = {};
+    var gdetails = {
+        type: 'column',
+        id: 'g-details-section',
+        content: [{
+            type: 'component',
+            componentName: 'changedetails',
+            title: 'Change Details',
+            componentState: {
+                label: 'D'
+            },
+            isClosable: false
+        }]
+    }
     $(document).ready(function() {
         var config = {
             content: [{
                 type: 'column',
-                height: 80,
+                id: 'main-container',
                 content: [{
                     type: 'row',
+                    id: 'main-row',
                     content: [{
                         type: 'component',
                         componentName: 'statistics',
@@ -85,23 +100,23 @@
                         isClosable: false
 
                     }]
-                }, {
-                    type: 'column',
-                    content: [{
-                        type: 'component',
-                        componentName: 'changedetails',
-                        title: 'Change Details',
-                        componentState: {
-                            label: 'D'
-                        },
-                        height: 20,
-                        isClosable: false
-                    }]
                 }]
-            }]
+            }],
+            settings: {
+                hasHeaders: true,
+                constrainDragToContainer: true,
+                reorderEnabled: true,
+                selectionEnabled: false,
+                popoutWholeStack: false,
+                blockedPopoutsThrowError: true,
+                closePopoutsOnUnload: true,
+                showPopoutIcon: false,
+                showMaximiseIcon: true,
+                showCloseIcon: false
+            }
         };
 
-        var myLayout = new GoldenLayout(config);
+        myLayout = new GoldenLayout(config, $('#visualization-area'));
 
         myLayout.registerComponent('testComponent', function(container, componentState) {
             container.getElement().html('<h2>' + componentState.label + '</h2>');
@@ -109,19 +124,18 @@
 
         myLayout.registerComponent('statistics', function(container, componentState) {
             container.getElement().html('<div id="statistics" class="collapse show left-panel">\
-                                                                            <label class="navbar-dark navbar-brand statistics-lbl">Statistics</label>\
-                                                                                <table id="table_taxon_id" class="table_stadistic"></table>\
-                                                                                <hr class="separator" />\
-                                                                                <table id="table_rank_id" class="table_stadistic"></table>\
-                                                                            </div>\
-                                                                            ');
+                                                                                                                                                                                                                        <table id="table_taxon_id" class="table_stadistic"></table>\
+                                                                                                                                                                                                                        <hr class="separator" />\
+                                                                                                                                                                                                                        <table id="table_rank_id" class="table_stadistic"></table>\
+                                                                                                                                                                                                                    </div>\
+                                                                                                                                                                                                                    ');
         });
 
 
         myLayout.registerComponent('edgeDrawing', function(container, componentState) {
             container.getElement().html('\
-                                                                                                         <div id="sketch-holder" class="main_body">\
-                                                                                                                                                        </div>');
+                                                                                                                                                                                                                                                 <div id="sketch-holder" class="main_body">\
+                                                                                                                                                                                                                                                                                                </div>');
 
             container.on('resize', function() {
                 console.log('panel_resize');
@@ -134,53 +148,55 @@
 
         myLayout.registerComponent('diffView', function(container, componentState) {
             container.getElement().html(`
-                                                                                    <div id="differenceView">
-                                                                                    <div id="sunburstChart" class="treeContainer  topPane"></div>
-                                                                                    <div id="indentedTree" class="topPane treeContainer "></div>
-                                                                                    <div class="input-group mb-3 search-diff">
-                                                                                        <div class="ui-widget">
-                                                                                            <input id="tags" class="form-control" placeholder="Search taxa" />
-                                                                                        </div>
-                                                                                        <div class="input-group-append">
-                                                                                            <button id="search-btn" class="btn btn-primary search-btn" onclick="onSearch()">
-                                                                                                    <i class="fas fa-search"></i>
-                                                                                                </button>
-                                                                                        </div>
-                                                                                    </div>
-                                                                                    <div id="tooltip" style="position: fixed; display: none;z-index: 5;">
-                                                                                        <canvas id="tooltipChart" width="250" height="250"></canvas>
-                                                                                    </div>
-                                                                                </div>
-                                                                                    `);
+                                                                                                                                                                                                                            <div id="differenceView">
+                                                                                                                                                                                                                            <div id="sunburstChart" class="treeContainer  topPane"></div>
+                                                                                                                                                                                                                            <div id="indentedTree" class="topPane treeContainer "></div>
+                                                                                                                                                                                                                            <div class="input-group mb-3 search-diff">
+                                                                                                                                                                                                                                <div class="ui-widget">
+                                                                                                                                                                                                                                    <input id="tags" class="form-control" placeholder="Search taxa" />
+                                                                                                                                                                                                                                </div>
+                                                                                                                                                                                                                                <div class="input-group-append">
+                                                                                                                                                                                                                                    <button id="search-btn" class="btn btn-primary search-btn" onclick="onSearch()">
+                                                                                                                                                                                                                                            <i class="fas fa-search"></i>
+                                                                                                                                                                                                                                        </button>
+                                                                                                                                                                                                                                </div>
+                                                                                                                                                                                                                            </div>
+                                                                                                                                                                                                                            <div id="tooltip" style="position: fixed; display: none;z-index: 5;">
+                                                                                                                                                                                                                                <canvas id="tooltipChart" width="250" height="250"></canvas>
+                                                                                                                                                                                                                            </div>
+                                                                                                                                                                                                                        </div>
+                                                                                                                                                                                                                            `);
         });
 
         myLayout.registerComponent('changedetails', function(container, componentState) {
             container.getElement().html(`
-                                    <div id="changeDetailsContainer" class="main_body" style="display:none">
-                                <div id="changeDetails" class="details-table">
-                                    <div class="general-title">
-                                        <span id="change-title">Change details for: Species X</span>
-                                    </div>
-                                    <div class="tree-titles">
-                                        <div class="column">
-                                            <span id="tree1-title">tree.author +""+ tree.date</span>
-                                        </div>
-                                        <div class="column">
-                                            <span id="tree2-title">tree.author +""+ tree.date</span>
-                                        </div>
-                                    </div>
-                                    <div id="oldTaxonomy" class="old-tax"></div>
-                                    <div id="newTaxonomy" class="new-tax"></div>
-                                </div>
-                            </div>
-                                    `);
+                                                                                                                                                                            <div id="changeDetailsContainer" class="main_body" style="display:none">
+                                                                                                                                                                        <div id="changeDetails" class="details-table change-details">
+                                                                                                                                                                            <div class="general-title">
+                                                                                                                                                                                <span id="change-title">Change details for: Species X</span>
+                                                                                                                                                                            </div>
+                                                                                                                                                                            <div class="tree-titles">
+                                                                                                                                                                                <div class="column">
+                                                                                                                                                                                    <span id="tree1-title">tree.author +""+ tree.date</span>
+                                                                                                                                                                                </div>
+                                                                                                                                                                                <div class="column">
+                                                                                                                                                                                    <span id="tree2-title">tree.author +""+ tree.date</span>
+                                                                                                                                                                                </div>
+                                                                                                                                                                            </div>
+                                                                                                                                                                            <div id="oldTaxonomy" class="old-tax"></div>
+                                                                                                                                                                            <div id="newTaxonomy" class="new-tax"></div>
+                                                                                                                                                                        </div>
+                                                                                                                                                                    </div>
+                                                                                                                                                                            `);
         });
-
 
         myLayout.on('initialised', function() {
             goldeninit = true;
         });
         myLayout.init();
+        setTimeout(() => {
+            hideDetailsSection();
+        }, 1000);
     });
 </script>
 
@@ -422,7 +438,7 @@
             </ul>
         </div>
     </nav>
-    <div id="visualization-area">
+    <div id="visualization-area" class="vis-area">
         <!-- <div id="context-holder" class="main_body right top">
         <label id="treeContext" class="treeContext"></label>
         </div> -->
