--- a/views/indented.ejs
+++ b/views/indented.ejs
@@ -346,19 +346,21 @@
             >
                 <canvas id="tooltipChart" width="250" height="250"></canvas>
             </div>
-        </div>
+             <span id="placeholder" class="placeholder"> Select a change type to display this view </span>
+                </div>
 
-        <!-- -->
-        <div class="infoSquare">
-            <p class="infoTitle"></p>
-            <p class="infoBody"></p>
-        </div>
+                <!-- -->
+                <div class="infoSquare">
+                    <p class="infoTitle"></p>
+                    <p class="infoBody"></p>
+                </div>
 
-        <!-- -->
-    </body>
-    <div id="busyLoader" class="overlay" style="display: none;">
-        <div class="three-quarters-loader center-loader">
-            Loading...
-        </div>
+                <!-- -->
+</body>
+<div id="busyLoader" class="overlay" style="display: none;">
+    <div class="three-quarters-loader center-loader">
+        Loading...
     </div>
+</div>
+
 </html>
