--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -107,6 +107,10 @@ body {
     top: var(--top-margin);
 }
 
+.pressed {
+    background-color: darkgreen !important;
+}
+
 
 /*Tables style*/
 
@@ -114,7 +118,7 @@ body {
     position: relative;
     border-collapse: collapse;
     text-align: right;
-    font-size: 8pt;
+    font-size: 7pt;
     color: #F2ECFF;
     border-bottom: 1px solid #999999;
     text-shadow: 2px 2px 4px black;
