Fix issues on Node Synchronization

--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -690,3 +690,11 @@ body .lm_content {
     position: absolute;
     color: black;
 }
+
+#treeContext {
+    position: absolute;
+}
+
+#changeDetailsContainer {
+    overflow: hidden;
+}
