--- a/views/about.ejs
+++ b/views/about.ejs
@@ -51,8 +51,9 @@
         </div>
     </div>
     <div class="about-text">
-        Diaforá is an initiative from the Intituto Tecnológico de Costa Rica
-        <a href="https://www.tec.ac.cr/">ITCR</a> to provide a visualization tool for taxonomic information. We aim that Diaforá will be helpful for taxonomist and biologist or enthusiast that are engaged with the comparison and correction of taxonomic
+        Diaforá is an initiative from the Instituto Tecnológico de Costa Rica
+        <a href="https://www.tec.ac.cr/">ITCR</a> to provide a visualization tool for taxonomic information. <br/>
+	We aim that Diaforá will be helpful for taxonomist and biologist or nature enthusiast people that are engaged with the comparison and correction of taxonomic
         trees in their databases.
     </div>
     <a href="https://www.tec.ac.cr/">
